--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ autom4te.cache
 
 #my
 /main
-/test
+*.out
 /f5c
 /biorand
 /*.tsv
@@ -73,3 +73,4 @@ autom4te.cache
 /*.paf
 /.bed
 /.vscode
+*.tmp
